# Citra-Engine

./: .gitignore  .gitmodules  Makefile  PORTING.md  README.md  getLinesOfCode.sh  windows-toolchain.cmake
amius_adventure/: CMakeLists.txt
amius_adventure/include/: adventureUtil.hpp  amius_adventure.hpp  asset_provider_interface.hpp  audio_interface.hpp  channel.hpp  error.hpp  object_macros.hpp  quikmath.hpp
amius_adventure/src/: CMakeLists.txt  camera.cpp  cameraMove.cpp  cameraMove.hpp  error.cpp  fpsCounter.cpp  fpsCounter.hpp  frontPlayer.cpp  frontPlayer.hpp  lib.cpp  playMusic.cpp  playMusic.hpp  quikmath.cpp  rotateCube.cpp  rotateCube.hpp  scene.cpp
citra_engine/: CMakeLists.txt  Makefile
citra_engine/include/citra_engine/: asset_provider_interface.hpp  audio_interface.hpp  channel.hpp  citra_engine.hpp  citra_engine_types.hpp  citra_engine_util.hpp  error.hpp  quikmath.hpp
citra_engine/src/: CMakeLists.txt  camera.cpp  cameraMove.cpp  cameraMove.hpp  error.cpp  fpsCounter.cpp  fpsCounter.hpp  frontPlayer.cpp  frontPlayer.hpp  lib.cpp  playMusic.cpp  playMusic.hpp  quikmath.cpp  rotateCube.cpp  rotateCube.hpp  scene.cpp
citra_engine/tests/: test.cpp
n3ds_platform/: LICENSE  Makefile
n3ds_platform/gfx/: 3DSLogoTex.t3s  UBSuzanneTex.t3s  kittyTex.t3s
n3ds_platform/romfs/: text.txt
n3ds_platform/romfs/models/: 3DSLogo.glb
n3ds_platform/romfs/scenes/: spinningScene.json
n3ds_platform/shaders/: missing.v.pica
n3ds_platform/src/: 3dtypes.hpp  assetProvider.cpp  assetProvider.hpp  audio.cpp  audio.hpp  exitfuncs.cpp  exitfuncs.hpp  file.cpp  file.hpp  gltfloader.cpp  gltfloader.hpp  main.cpp  n3dslink.cpp  n3dslink.hpp  opusDecoder.cpp  render.cpp  render.hpp  shaders.hpp  shapes.hpp  simple_textured.v.pica  vorbisDecoder.cpp
n3ds_platform/tests/: Makefile
n3ds_platform/tests/src/: graphicsMath.cpp  graphicsMath.hpp  logToSDMC.cpp  logToSDMC.hpp  testFunction.hpp  testingMain.cpp
n3ds_sprite_maker/: CMakeLists.txt  Makefile
n3ds_sprite_maker/include/: types.hpp
n3ds_sprite_maker/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
pc_platform/: CMakeLists.txt  Makefile
pc_platform/data/models/: 3DSSuzanne.glb
pc_platform/shaders/: missing.glsl.frag  missing.glsl.vert  simple_textured.glsl.frag  simple_textured.glsl.vert
pc_platform/src/: CMakeLists.txt  assetProvider.cpp  assetProvider.hpp  audio.cpp  audio.hpp  controllermap.cpp  controllermap.hpp  dirUtil.cpp  dirUtil.hpp  exitfuncs.hpp  fileUtil.hpp  globalVulkanVars.cpp  globalVulkanVars.hpp  gltfLoader.cpp  gltfLoader.hpp  main.cpp  render.cpp  render.hpp  renderPrimitives.cpp  renderPrimitives.hpp  shapes.hpp  vulkanBufferUtils.cpp  vulkanBufferUtils.hpp
