file(GLOB CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_executable(CitraEnginePC ${CPP_FILES} ${PROJECT_SOURCE_DIR}/../simdjson/simdjson.cpp)

target_link_libraries(CitraEnginePC PRIVATE CitraEngine)
target_link_libraries(CitraEnginePC PRIVATE SDL3::SDL3)
target_link_libraries(CitraEnginePC PRIVATE SDL3_mixer::SDL3_mixer)
target_link_libraries(CitraEnginePC PRIVATE SDL3_image::SDL3_image)
target_link_libraries(CitraEnginePC PRIVATE Vulkan::Vulkan)
target_link_libraries(CitraEnginePC PRIVATE glm::glm)
target_link_libraries(CitraEnginePC PRIVATE GPUOpen::VulkanMemoryAllocator)
if (APPLE)
    target_link_libraries(CitraEnginePC PRIVATE Vulkan::MoltenVK)
endif()
target_link_libraries(CitraEnginePC PRIVATE fastgltf::fastgltf)